[package]
name = "ferrishot_knus-derive"
version = "3.3.1"
edition = "2024"
description = """
    A derive implementation for ferrishot_knus KDL parser
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration"]
homepage = "https://github.com/TheLostLambda/ferrishot_knus"
documentation = "https://docs.rs/ferrishot_knus"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
heck = { version="0.5.0" }
syn = { version="2.0.101", features=["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
proc-macro-error2 = "2.0.1"

[dev-dependencies]
ferrishot_knus = { path=".." }
miette = { version="7.6.0", features=["fancy"] }
