[package]
name = "ferrishot_knus-derive"
version = "3.2.0"
edition = "2021"
description = """
    A derive implementation for ferrishot_knus KDL parser
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration"]
homepage = "https://github.com/TheLostLambda/ferrishot_knus"
documentation = "https://docs.rs/ferrishot_knus"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
heck = { version="0.5.0" }
syn = { version="2.0.85", features=["full", "extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.89"
proc-macro-error2 = "2.0.1"

[dev-dependencies]
ferrishot_knus = { path=".." }
miette = { version="7.2.0", features=["fancy"] }
